--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,3 @@
 @import './assets/reset.scss';
 @import './assets/mixins.scss';
 @import './assets/helper.scss';
-
-.sidebar-opened {
-  overflow: hidden;
-}
